Fix masthead spacing and size

--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,8 @@ body {
     .masthead {
       display: flex;
       justify-content: space-between;
+      margin-inline: auto;
+      max-inline-size: 75rem;
       padding: 1rem 5%;
     }
     .main-nav-menu li {
@@ -121,7 +123,7 @@ body {
       display: flex;
       gap: 1rem;
       justify-content: center;
-      padding: 1.125rem 0;
+      padding: 1rem 0;
     }
     .nav-list li {
       padding: 0;
